// Copyright (C) 2019 The Xaya developers
// Distributed under the MIT software license, see the accompanying
// file COPYING or http://www.opensource.org/licenses/mit-license.php.

syntax = "proto2";

package ships.proto;

/**
 * A message stating that one of the players won the game in some channel.
 */
message WinnerStatement
{

  /** The winner as index into the list of participents.  */
  optional uint32 winner = 1;

  /* Note that message signatures in general (thus also the signature made
     on a winner statement) are already tied to a particular channel ID.
     Thus it is not necessary to include the channel ID or any other metadata
     (like the Xaya names of participants) in the message.  */

}
